// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlatformPicker render() should only render Mobile platforms under Mobile tab 1`] = `
<div
  className="platform-picker"
>
  <ul
    className="nav nav-tabs"
  >
    <li
      style={
        Object {
          "float": "right",
          "marginRight": 0,
        }
      }
    >
      <div
        className="platform-filter-container"
      >
        <span
          className="icon icon-search"
        />
        <input
          className="platform-filter"
          label="Filter"
          onChange={[Function]}
          placeholder="Filter"
          type="text"
          value=""
        />
      </div>
    </li>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Popular
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Frontend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Mobile
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Backend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      All
    </ListLink>
  </ul>
  <ul
    className="client-platform-list platform-tiles"
  >
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="java-android"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="objc"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="cocoa"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="swift"
    />
  </ul>
</div>
`;

exports[`PlatformPicker render() should render renderPlatformList with Python when filtered with py 1`] = `
<div
  className="platform-picker"
>
  <ul
    className="nav nav-tabs"
  >
    <li
      style={
        Object {
          "float": "right",
          "marginRight": 0,
        }
      }
    >
      <div
        className="platform-filter-container"
      >
        <span
          className="icon icon-search"
        />
        <input
          className="platform-filter"
          label="Filter"
          onChange={[Function]}
          placeholder="Filter"
          type="text"
          value="py"
        />
      </div>
    </li>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Popular
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Frontend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Mobile
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Backend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      All
    </ListLink>
  </ul>
  <ul
    className="client-platform-list platform-tiles"
  >
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-bottle"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-celery"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-django"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-flask"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-pylons"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-pyramid"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-rq"
    />
    <PlatformCard
      className=""
      onClick={[Function]}
      platform="python-tornado"
    />
  </ul>
</div>
`;

exports[`PlatformPicker render() should render renderPlatformList with community SDKs message if platform not found 1`] = `
<div
  className="platform-picker"
>
  <ul
    className="nav nav-tabs"
  >
    <li
      style={
        Object {
          "float": "right",
          "marginRight": 0,
        }
      }
    >
      <div
        className="platform-filter-container"
      >
        <span
          className="icon icon-search"
        />
        <input
          className="platform-filter"
          label="Filter"
          onChange={[Function]}
          placeholder="Filter"
          type="text"
          value="aaaaaa"
        />
      </div>
    </li>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Popular
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Frontend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Mobile
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      Backend
    </ListLink>
    <ListLink
      activeClassName="active"
      index={false}
      isActive={[Function]}
      onClick={[Function]}
      to=""
    >
      All
    </ListLink>
  </ul>
  <p>
    Not finding your platform? There's a rich ecosystem of community supported SDKs as well (including Perl, CFML, Clojure, and ActionScript).
     Try searching for Sentry clients or contacting support.
  </p>
</div>
`;

exports[`PlatformPicker render() should update State.tab onClick when particular tab is clicked 1`] = `
<PlatformPicker
  location={
    Object {
      "query": Object {},
    }
  }
  platform=""
  setPlatform={[Function]}
  showOther={true}
>
  <div
    className="platform-picker"
  >
    <ul
      className="nav nav-tabs"
    >
      <li
        style={
          Object {
            "float": "right",
            "marginRight": 0,
          }
        }
      >
        <div
          className="platform-filter-container"
        >
          <span
            className="icon icon-search"
          />
          <input
            className="platform-filter"
            label="Filter"
            onChange={[Function]}
            placeholder="Filter"
            type="text"
            value=""
          />
        </div>
      </li>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Popular
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Frontend
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Mobile
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        onClick={[Function]}
        to=""
      >
        <li
          className=""
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Backend
            </a>
          </Link>
        </li>
      </ListLink>
      <ListLink
        activeClassName="active"
        index={false}
        isActive={[Function]}
        onClick={[Function]}
        to=""
      >
        <li
          className="active"
        >
          <Link
            onClick={[Function]}
            onlyActiveOnIndex={false}
            style={Object {}}
            to=""
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              All
            </a>
          </Link>
        </li>
      </ListLink>
    </ul>
    <ul
      className="client-platform-list platform-tiles"
    >
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="csharp"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="csharp"
          >
            <li
              className="platform-tile list-unstyled csharp csharp "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-csharp"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            C#
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="elixir"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="elixir"
          >
            <li
              className="platform-tile list-unstyled elixir elixir "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-elixir"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Elixir
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="go"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="go"
          >
            <li
              className="platform-tile list-unstyled go go "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-go"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Go
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="go-http"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="go-http"
          >
            <li
              className="platform-tile list-unstyled go-http go "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-go-http"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            net/http
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="java-android"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-android"
          >
            <li
              className="platform-tile list-unstyled java-android java "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-java-android"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Android
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="java-appengine"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-appengine"
          >
            <li
              className="platform-tile list-unstyled java-appengine java "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-java-appengine"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Google App Engine
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="java"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java"
          >
            <li
              className="platform-tile list-unstyled java java "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-java"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Java
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="java-log4j"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-log4j"
          >
            <li
              className="platform-tile list-unstyled java-log4j java "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-java-log4j"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Log4j 1.x
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="java-log4j2"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-log4j2"
          >
            <li
              className="platform-tile list-unstyled java-log4j2 java "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-java-log4j2"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Log4j 2.x
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="java-logback"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-logback"
          >
            <li
              className="platform-tile list-unstyled java-logback java "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-java-logback"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Logback
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="java-logging"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="java-logging"
          >
            <li
              className="platform-tile list-unstyled java-logging java "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-java-logging"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            java.util.logging
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="javascript-angular"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-angular"
          >
            <li
              className="platform-tile list-unstyled javascript-angular javascript "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-javascript-angular"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Angular
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="javascript-angularjs"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-angularjs"
          >
            <li
              className="platform-tile list-unstyled javascript-angularjs javascript "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-javascript-angularjs"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            AngularJS
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="javascript-backbone"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-backbone"
          >
            <li
              className="platform-tile list-unstyled javascript-backbone javascript "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-javascript-backbone"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Backbone
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="javascript-ember"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-ember"
          >
            <li
              className="platform-tile list-unstyled javascript-ember javascript "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-javascript-ember"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Ember
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="javascript"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript"
          >
            <li
              className="platform-tile list-unstyled javascript javascript "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-javascript"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            JavaScript
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="javascript-react"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-react"
          >
            <li
              className="platform-tile list-unstyled javascript-react javascript "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-javascript-react"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            React
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="javascript-vue"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="javascript-vue"
          >
            <li
              className="platform-tile list-unstyled javascript-vue javascript "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-javascript-vue"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Vue
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="node-connect"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="node-connect"
          >
            <li
              className="platform-tile list-unstyled node-connect node "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-node-connect"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Connect
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="node-express"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="node-express"
          >
            <li
              className="platform-tile list-unstyled node-express node "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-node-express"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Express
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="node-koa"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="node-koa"
          >
            <li
              className="platform-tile list-unstyled node-koa node "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-node-koa"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Koa
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="node"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="node"
          >
            <li
              className="platform-tile list-unstyled node node "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-node"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Node.js
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="objc"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="objc"
          >
            <li
              className="platform-tile list-unstyled objc objc "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-objc"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Objective-C
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="php-laravel"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="php-laravel"
          >
            <li
              className="platform-tile list-unstyled php-laravel php "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-php-laravel"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Laravel
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="php-monolog"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="php-monolog"
          >
            <li
              className="platform-tile list-unstyled php-monolog php "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-php-monolog"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Monolog
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="php"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="php"
          >
            <li
              className="platform-tile list-unstyled php php "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-php"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            PHP
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="php-symfony2"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="php-symfony2"
          >
            <li
              className="platform-tile list-unstyled php-symfony2 php "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-php-symfony2"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Symfony2
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python-bottle"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-bottle"
          >
            <li
              className="platform-tile list-unstyled python-bottle python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python-bottle"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Bottle
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python-celery"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-celery"
          >
            <li
              className="platform-tile list-unstyled python-celery python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python-celery"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Celery
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python-django"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-django"
          >
            <li
              className="platform-tile list-unstyled python-django python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python-django"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Django
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python-flask"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-flask"
          >
            <li
              className="platform-tile list-unstyled python-flask python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python-flask"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Flask
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python-pylons"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-pylons"
          >
            <li
              className="platform-tile list-unstyled python-pylons python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python-pylons"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Pylons
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python-pyramid"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-pyramid"
          >
            <li
              className="platform-tile list-unstyled python-pyramid python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python-pyramid"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Pyramid
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python"
          >
            <li
              className="platform-tile list-unstyled python python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Python
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python-rq"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-rq"
          >
            <li
              className="platform-tile list-unstyled python-rq python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python-rq"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            RQ
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="python-tornado"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="python-tornado"
          >
            <li
              className="platform-tile list-unstyled python-tornado python "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-python-tornado"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Tornado
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="cocoa"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="cocoa"
          >
            <li
              className="platform-tile list-unstyled cocoa cocoa "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-cocoa"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            React-Native
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="ruby-rack"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="ruby-rack"
          >
            <li
              className="platform-tile list-unstyled ruby-rack ruby "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-ruby-rack"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Rack
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="ruby-rails"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="ruby-rails"
          >
            <li
              className="platform-tile list-unstyled ruby-rails ruby "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-ruby-rails"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Rails
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="ruby"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="ruby"
          >
            <li
              className="platform-tile list-unstyled ruby ruby "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-ruby"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Ruby
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="swift"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="swift"
          >
            <li
              className="platform-tile list-unstyled swift swift "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-swift"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Swift
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="mock"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="mock"
          >
            <li
              className="platform-tile list-unstyled mock mock "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-mock"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Mock Integration
             
          </h5>
        </span>
      </PlatformCard>
      <PlatformCard
        className=""
        onClick={[Function]}
        platform="other"
      >
        <span
          className="platform-card"
          onClick={[Function]}
        >
          <PlatformiconTile
            className=""
            onClick={[Function]}
            platform="other"
          >
            <li
              className="platform-tile list-unstyled other other "
              onClick={[Function]}
            >
              <span
                className="platformicon platformicon-other"
              />
            </li>
          </PlatformiconTile>
          <h5>
             
            Other
             
          </h5>
        </span>
      </PlatformCard>
    </ul>
  </div>
</PlatformPicker>
`;
